alignment issues

--- a/orbital/frontend/src/App.css
+++ b/orbital/frontend/src/App.css
@@ -354,7 +354,7 @@
   height: 3vh;
   width: 10vh;
   bottom: 64vh;
-  right: 12vh;
+  right: 12.5vh;
   display: inline-block;
   margin-top: 0px;
   margin-bottom: 0px;
